# translate_llama-server-webui

./: .gitignore  Makefile  README.md  translation-studio-mvp.md
apps/middleware/: README.md  pyproject.toml
apps/middleware/src/translator_studio/: config.py  container.py  main.py
apps/middleware/src/translator_studio/api/: conversations.py  deps.py  glossary.py  logs.py  openai_proxy.py  presets.py  preview.py  router.py  schemas.py  settings.py  translate.py
apps/middleware/src/translator_studio/conversations/: __init__.py  models.py  repository.py  service.py
apps/middleware/src/translator_studio/detector/: matcher.py  service.py
apps/middleware/src/translator_studio/glossary/: loader.py  models.py  repository.py  service.py
apps/middleware/src/translator_studio/logs/: logger.py
apps/middleware/src/translator_studio/postprocess/: service.py
apps/middleware/src/translator_studio/prompt/: builder.py  models.py  presets.py  templates.py
apps/middleware/src/translator_studio/translation/: llama_client.py  service.py  streamer.py
apps/middleware/src/translator_studio/utils/: tokens.py  yaml_io.py
apps/middleware/tests/: conftest.py  test_api.py  test_api_conversations.py  test_conversations_repository.py  test_conversations_service.py  test_detector_matcher.py  test_detector_service.py  test_generation_settings.py  test_glossary_loader.py  test_glossary_repository.py  test_postprocess.py  test_prompt_builder.py  test_prompt_presets.py  test_translation_service.py  test_utils_tokens.py
apps/middleware/tests/fixtures/: sample_conversation.jsonl
(+54 files in other folders)
