[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "translator-studio"
version = "0.1.0"
description = "Translation middleware and studio for llama.cpp (JA→KO)"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
  "fastapi>=0.115",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.7",
  "pydantic-settings>=2.4",
  "httpx>=0.27",
  "pyyaml>=6.0",
  "ruamel.yaml>=0.18",
]

[project.optional-dependencies]
dev = [
  "pytest>=8",
  "pytest-asyncio>=0.23",
]

[tool.hatch.build.targets.wheel]
packages = ["src/translator_studio"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
